tests/tooling/fixtures/native/recovery/negative/negative_pure_extern_missing_fn_keyword.objc3
// Negative fixture: pure/extern qualifier chains require the `fn` keyword.
// Expected diagnostic code(s): O3P100.
module NegativePureExternMissingFnKeyword;

pure extern let value = 1;

fn main() -> i32 {
  return value;
}
